example/error/err_1.pas

Program example(input, output);

Const z = 15.s2fs ;

Var x, y : integer;
Function gcd( a, b : integer)  integer;
Begin
  If b = 0 Then gcd := a
  Else gcd := gcd(b, a Mod c
End;
Begin
  read(x, y);
  write(gcd(x, y))
End.
